kubelearn/busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: busybox-deployment
spec:
  revisionHistoryLimit: 5 
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  replicas: 2
  selector:
    matchLabels:
      app: busybox
  template: 
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox-deploy
        image: busybox:1.28
        command: ['sleep', '600']
      nodeSelector:
        web: learn
