kubelearn/init-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod-init
  labels:
    app: busybox
spec:
  restartPolicy: OnFailure
  containers:
  - name: busybox-pod
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
  nodeSelector:
    web: learn
