kubelearn/nginx-pod-ephemeral.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-ephemeral
  labels:
    web: learn
spec:
  restartPolicy: OnFailure
  containers:
  - name: nginx-pod
    image: nginx:1.13.12
    ports:
    - containerPort: 80
  ephemeralContainers:
  - name: busybox-ephemeral
    image: ephemeral-busybox
    command: ['ps', 'aux']
    stdin: true
    tty: true
    terminationMessagePolicy: File
  nodeSelector:
    web: learn
