kubelearn/pod-dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-example
  lables:
    example: dns
spec:
  containers:
  - name: busybox-1
    image: busybox:1.31
    command: ['sleep', '600']
  restartPolicy: Never
  hostname: busybox-dns
  dnsPolicy: None
  dnsConfig:
    nameservers:
      - 8.8.8.8
    options:
      - name: end
        value: 1.2.3.4
    searches:
      - "www.baidu.com"
