kubelearn/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  restartPolicy: OnFailure
  containers:
  - name: nginx
    image: nginx:1.13.12
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        scheme: HTTP
        path: /
        port: 80
      initialDelaySeconds: 15
      timeoutSeconds: 1
  nodeSelector:
    web: learn
