kubelearn/toleration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  selector:
    matchLabels:
      app: web-server
  replicas: 3
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      tolerations:
      - key:
        value:
        effect: "NoSchedule"
        operator: Equal / Exists
