kubelearn/example-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ep-svc
subsets:
  - addresses:
      - ip: 10.1.2.3
    ports:
      - port: 9376
