kubelearn/example-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    svc: example
  name: exmaple-service
spec:
 selector:
   deployment: example
 ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
