kubelearn/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
  labels:
    app: busybox
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: busybox
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      name: web
  serviceName: busybox-service
  template:
    metadata:
      labels:
        name: web
    spec:
      terminationGracePeriodSeconds: 10
      containers: 
      - name: busybox
        image: busybox-1.31
        command: ['sleep', '600']
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /tmp
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "my-storage-class"
      resources:
        requests: 
          storage: 1Gi
