kubelearn/ingress-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  tls:
  - host:
    - example.com
    secretName: fsdfs
  rules:
  - http:
      paths:
      - path: /healthz
        backend:
          serviceName: my-example
          servicePort: 80 
   - http:
       paths:
       - path: /hello
         backend:
           serviceName: my-example1
           servicePort: 8080
